# wavs-ai-trader

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  Taskfile.yml
artifacts/: checksums.txt
backend/chains/: start_neutron.sh
backend/docker/: ipfs.yml  wavs-aggregator.yml  wavs-instance.yml  wavs-operator.yml  wavs-telemetry-prometheus.yml  wavs-telemetry.yml
backend/starship/: chains.yml
backend/wavs-home/: wavs.toml
builds/contracts/: vault.wasm
builds/deployments/: middleware.json  service-manager-code-id.json  stake-registry-code-id.json  vault-code-id.json  vault.json
builds/schema/vault/: vault.json
components/aggregator/: Cargo.toml
components/aggregator/src/: lib.rs
components/operator/: Cargo.toml
components/operator/src/: ai.rs  coingecko.rs  core.rs  lib.rs  skip.rs
components/operator/src/skip/: types.rs
contracts/: Cargo.toml
contracts/vault/: Cargo.toml
contracts/vault/schema/: vault.json
contracts/vault/src/: astroport.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  skip_entry.rs  state.rs  tests.rs  utils.rs
docs/: GETTING_STARTED.md  PLAN.md
frontend/: .env  .env.example  README.md  package.json  pnpm-lock.yaml
frontend/schema/: vault.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DepositWithdraw.tsx  Header.tsx  Hero.tsx  PendingDeposits.tsx  TradeHistory.tsx  VaultStats.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/contract-bindings/: Vault.client.ts  Vault.types.ts  baseClient.ts
frontend/src/hooks/: useTokenMetadata.ts  useTransactionHistory.ts  useVault.ts
taskfile/: backend.yml  cli.yml  components.yml  config.yml  contracts.yml  deploy.yml  test.yml
