[workspace]
resolver = "2"
members = ["vault"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "2.2.2", features = ["staking"] }
cosmwasm-schema = "2.2.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0"
serde_json = "1.0"
thiserror = "2.0.17"
cw-utils = "2.0.0"
cw-ownable = "2.1.0"
