[package]
name = "ai-portfolio-aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
layer-climb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
wstd = { workspace = true }
wavs-wasi-utils = { workspace = true }
wit-bindgen-rt = { workspace = true }
thiserror = { workspace = true }
cosmwasm-std = { workspace = true }
wavs-types = { workspace = true }
vault = { workspace = true }
wit-bindgen = { workspace = true }
