[package]
name = "ai-portfolio-operator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:ai-portfolio-operator"
target = "wavs:operator@=2.0.0"

[dependencies]
layer-climb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
wstd = { workspace = true }
wavs-wasi-utils = { workspace = true }
wit-bindgen-rt = { workspace = true }
thiserror = { workspace = true }
cosmwasm-std = { workspace = true }
wavs-types = { workspace = true }
vault = { workspace = true }
