[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }
cw-ownable = { workspace = true }
wavs-types = { workspace = true }
bincode = { workspace = true }

[features]
library = []
