[package]
name = "vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }
cw-ownable = { workspace = true }
wavs-types = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

[features]
library = []
